--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,13 @@ crashlytics-build.properties
 /Sokoban/Logs
 /Sokoban/Temp
 /Sokoban/UserSettings
+/Sokoban/.utmp
+/Sokoban/Assets/TextMesh Pro
+/Sokoban/BuildWin
+/Sokoban/BuildWeb
+/Sokoban/obj
+/Sokoban/obj
+/Sokoban/Build
+/Sokoban/Assets/Adaptive Performance
+/Sokoban/Assets/Adaptive Performance
+/Sokoban/UserSettings
