--- a/Sokoban/Packages/manifest.json
+++ b/Sokoban/Packages/manifest.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
     "com.unity.adaptiveperformance": "5.1.0",
+    "com.unity.adaptiveperformance.google.android": "1.3.1",
     "com.unity.addressables": "2.2.2",
+    "com.unity.addressables.android": "1.0.4",
     "com.unity.ai.navigation": "2.0.4",
     "com.unity.collab-proxy": "2.5.2",
     "com.unity.ide.rider": "3.0.31",
