--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,4 @@ crashlytics-build.properties
 /Sokoban/Assets/Adaptive Performance
 /Sokoban/Assets/Adaptive Performance
 /Sokoban/UserSettings
+/Sokoban/UserSettings
